# EAZZU

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
eazzu/: __init__.py  __main__.py  autoinstall.py  cli.py  cli_ui.py  completion.py  config.py  doctor.py  tools_discovery.py  updater.py
eazzu/agent/: __init__.py  core.py  loop.py  memory.py
eazzu/agents/: __init__.py  automation_agent.py  correlation_agent.py  execution_flow_agent.py  liquidity_agent.py  news_agent.py  optimization_agent.py  orchestrator.py  pattern_agent.py  risk_agent.py  self_learning_agent.py  sentiment_agent.py  strategy_agent.py  types.py  volatility_agent.py  web_scraping_agent.py
eazzu/audio/: __init__.py  advanced_mixer.py  advanced_music.py  advanced_visualizer.py  audio_tools.py  auto_master.py  channel_rack.py  engine.py  export_engine.py  extended_fx.py  extended_fx2.py  midi_input.py  midi_tools.py  modulation.py  oneshot_sampler.py  piano_roll.py  pitch_formant.py  playlist.py  recorder.py  sample_packs.py  sequencer.py  stem_splitter.py  vinny.py  vinny_extended.py  vinny_pro.py  visualizer.py  voice_synth.py
eazzu/bot/: __init__.py  telegram.py
eazzu/dev/toolkit/: __init__.py  __main__.py  ai_analyzer.py  cli.py  debugger.py  extractor.py  filecreator.py  runner.py  utils.py
eazzu/mcp/: __init__.py  client.py  registry.py
eazzu/mcp/servers/: __init__.py  _protocol.py  fetch.py  filesystem.py  huggingface.py  mt5.py  tradingview.py
eazzu/media/: __init__.py
eazzu/media/image/: __init__.py  font5x7.py
eazzu/media/swiss_knife/: README.md  main.py  requirements.txt
eazzu/media/swiss_knife/core/: __init__.py  brain.py  kernel.py  memory.py  pipeline.py  vision.py
eazzu/media/swiss_knife/memory/: episodic.json
eazzu/media/swiss_knife/tools/: __init__.py  audio_tagger.py  converter.py  downloader.py  file_manager.py  organizer.py  system_tool.py  vision_tool.py  web_scraper.py
eazzu/media/swiss_knife/utils/: __init__.py  config.py  logger.py
eazzu/net/ip/: ip_generator.py
eazzu/net/vpn/: LICENSE  README.md  benchmark.py  run_cli.py  run_gui.py
eazzu/net/vpn/cli/: main.py
eazzu/net/vpn/core/: __init__.py  config.py  crypto.py  presets.py  security.py  server_manager.py  vpn_engine.py
eazzu/net/vpn/docs/: PERFORMANCE.txt
eazzu/net/vpn/gui/: dashboard.py
eazzu/net/vpn/tests/: test_all.py
eazzu/providers/: __init__.py  __main__.py  router.py
eazzu/providers/core/: __init__.py  base_provider.py  cache.py  config.py  connector.py  failover.py  http.py  registry.py  tracker.py
eazzu/providers/interfaces/: cli.py  gui.py  web.py
eazzu/providers/providers/: __init__.py  aggregators.py  audio_providers.py  cloud_providers.py  custom.py  embedding_providers.py  image_providers.py  llm_providers.py  openai_compatible.py  search_providers.py
eazzu/tools/: __init__.py  accessibility_tools.py  advanced_music_tools.py  advanced_tools.py  agent_tools.py  ai_coding_tools.py  alert_dispatcher.py  app_builder_tools.py  artifact_tools.py  automation_canvas_tools.py  bi_tools.py  code_tools.py  computer_tools.py  crosscut_tools.py  data_tools.py  daw_tools.py  deriv_tools.py  dev_tools.py  diagram_tools.py  docs_tools.py  expanded_tools.py  extra_tools.py  files.py  image_tools.py  language_tools.py  local_ai_tools.py  mcp_tools.py  media_ai_tools.py  media_audio_tools.py  media_creative_tools.py  media_edit_tools.py  media_export_tools.py  media_nextgen_tools.py  media_pro_tools.py  media_smart_tools.py  memory_tools.py  music_tools.py  net_tools.py  notes_tools.py  pipeline_extra_tools.py  (+18 more)
eazzu/tools/deep_research/: README.md
eazzu/tools/deep_research/client/: index.html  package-lock.json  package.json
eazzu/tools/deep_research/docs/: ARCHITECTURE.md
eazzu/tools/deep_research/server/: .env.example  .gitignore  package-lock.json  package.json
eazzu/trading/: __init__.py  advanced_analysis.py  advanced_indicators.py  anomaly_cluster.py  deriv_api.py  deriv_client.py
eazzu/trading/deriv_scalper/: main.py  requirements.txt  setup.py
eazzu/trading/deriv_scalper/backtest/: __init__.py  data_generator.py  engine.py
eazzu/trading/deriv_scalper/cli/: __init__.py  commands.py  main.py
eazzu/trading/deriv_scalper/config/: __init__.py  settings.py
eazzu/trading/deriv_scalper/core/: __init__.py  bot.py  deriv_client.py  logger.py  trader.py
eazzu/trading/deriv_scalper/gui/: __init__.py  dashboard.py  widgets.py
eazzu/trading/deriv_scalper/indicators/: __init__.py  atr.py  bollinger.py  ema.py  engine.py  macd.py  price_action.py  rsi.py  stochastic.py
eazzu/trading/deriv_scalper/utils/: __init__.py  helpers.py  risk_calculator.py
eazzu/trading/intelligence/: __init__.py  analytics.py  io.py  knowledge.py  models.py  signals.py  tracker.py
eazzu/trading/knowledge/: _MASTER_GUIDE.json  audusd.json  btcusd.json  deriv_api_reference.json  scalping_daytrading_playbook.json  sessions_sast.json  usdcad.json  usdjpy.json  volatility_100.json  volatility_50.json  volatility_75.json  xauusd.json
eazzu/trading/trading_system/: README.md  __init__.py  main.py  requirements.txt
eazzu/trading/trading_system/agents/: signal_agents.py
eazzu/trading/trading_system/analysis/: indicators.py
eazzu/trading/trading_system/api/: deriv_client.py
eazzu/trading/trading_system/backtest/: backtester.py
eazzu/trading/trading_system/config/: settings.py
eazzu/trading/trading_system/core/: logger.py  system.py  types.py
eazzu/trading/trading_system/council/: voting_system.py
eazzu/trading/trading_system/models/: ml_models.py
eazzu/trading/trading_system/signals/: signal_engine.py
eazzu/trading/trading_system/training/: pipeline.py
eazzu/web/chat/: README.md  index.html  manifest.json  sw.js
ish/: README.md  bootstrap.sh
tests/: test_cli_v16.py  test_qol.py  test_router.py  test_smoke.py  test_trading_intelligence.py  test_v17.py  test_v18.py
(+44 files in other folders)
