[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eazzu"
version = "1.8.0"
description = "Unified agentic developer, trading intelligence, productivity and AI toolkit — transparent analysis, signals and adaptive tracking."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "EAZZU" }]
keywords = ["agent", "cli", "llm", "trading", "deriv", "forex", "devtools", "ish", "ios", "music", "audio", "image", "web", "productivity", "docs", "spreadsheets", "presentations", "notes", "tasks", "projects", "diagrams", "workflow", "bi", "search", "language", "accessibility"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Topic :: Office/Business :: Financial",
]
# Kept intentionally slim so the base install works on iSH (Alpine/musl on iOS).
dependencies = [
  "requests>=2.31",
  "cryptography>=41.0",
]

[project.optional-dependencies]
trading  = ["pandas>=2.0", "numpy>=1.24", "websocket-client>=1.7"]
dev      = ["rich>=13.0"]
image    = ["pillow>=10.0", "mss>=9.0"]
pdf      = ["fpdf2>=2.7"]
slides   = ["python-pptx>=0.6"]
automation = ["pyautogui>=0.9"]
web = ["playwright>=1.0"]
audio = ["soundfile>=0.12", "numpy>=1.24"]
yaml = ["pyyaml>=6.0"]
http = ["httpx>=0.25"]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
all      = [
  "pandas>=2.0", "numpy>=1.24", "websocket-client>=1.7",
  "rich>=13.0", "pillow>=10.0", "mss>=9.0", "fpdf2>=2.7", "python-pptx>=0.6",
  "pyautogui>=0.9", "soundfile>=0.12", "pyyaml>=6.0", "httpx>=0.25",
  "fastapi>=0.110", "uvicorn>=0.27", "colorama>=0.4", "tqdm>=4.0",
  "qrcode[pil]>=7.0",
]

[project.scripts]
eazzu = "eazzu.cli:main"

[project.urls]
Homepage = "https://github.com/EAZZU"
Issues   = "https://github.com/EAZZU/EAZZU/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["eazzu*"]

[tool.setuptools.package-data]
eazzu = [
  "web/chat/**/*",
  "providers/**/*.json",
  "trading/**/*.json",
  "trading/**/*.yaml",
  "media/image/**/*.py",
]
